---------------------------------------------------------------------------------------------------
Version: 0.5.14
Date: ???
  Changes:
    - Added missing prerequisites #295
  Bugfixes:
    - Fixed Radar being unlocked by both Military and Radars 1 #296
    - Fixed Exoplanetary Studies Lab recipe not including previous lab tier #303
    - Fixed Wind Turbine energy production graph #304
    - Fixed Washing Plant pipe arrow #305
    - Fixed Companion Drone multiplayer compatibility #307
---------------------------------------------------------------------------------------------------
Version: 0.5.13
Date: 14.07.2023
  Changes:
    - Milestones mod compatibility #292
---------------------------------------------------------------------------------------------------
Version: 0.5.12
Date: 01.01.2023
  Changes:
    - Marked Alien Biomes mod as incompatible #263
    - Marked Angel's Exploration mod as incompatible #264
    - Added tech Steam power #271
    - Reduced the cost of Circuit wires #286
    - Adjusted science packs required for Power Armor research #287
    - Adjusted science packs for FTL techs (SpaceX) #288
    - Added Thermal Water Bore to ingredients for Thermal Water Extractor #290
  Bugfixes:
    - Fixed tech unlocks after adding Science Cost Tweaker mod mid game #260
    - Fixed duplicate starting items in rock-chest as well as player inventory #268
    - Basic Chemistry 2 tech missing green science #269
    - Fixed setting "SpaceX ignore tech price multiplier" #273
    - Removed Fuel pollution from fluids with no fuel value #280
---------------------------------------------------------------------------------------------------
Version: 0.5.11
Date: 06.06.2022
  Changes:
    - Science Cost Tweaker: #247
      - Purple and some military science intermediates are craftable in an Electronics assembling machine
      - Bio science can use productivity modules
      - Renamed Lab 2 to Exoplanetary Studies Lab