@@ -6,6 +6,7 @@ require("data-updates/furnaces")
 require("data-updates/groups")
 require("data-updates/military")
 require("data-updates/misc")
+require("data-updates/other-mods")
 require("data-updates/rubber")
 require("data-updates/science-cost-tweaker")
 require("data-updates/slag-processing")
