@@ -2,6 +2,7 @@
 Version: 0.5.14
 Date: ???
   Changes:
+    - Added support for Early Construction mod #254
     - Added missing prerequisites #295
   Bugfixes:
     - Fixed Radar being unlocked by both Military and Radars 1 #296
